// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Snapshot tests should match snapshot 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with fatal error 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="error"
    >
      <span
        class="errorHeader"
      >
        Превышено количество попыток ввода кода
      </span>
      <span
        class="errorText"
      >
        Выполните операцию с самого начала
      </span>
      <button
        class="component secondary xs component secondary"
        type="button"
      >
        <span
          class="text stretchText"
        >
          Понятно
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with masked phone 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          <div>
            Код отправлен на
             
            +7 ··· ··· 55-66
          </div>
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with nonFatal error 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        <div
          class="error"
        >
          Неверный код
        </div>
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left hasError"
        >
          
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with signTitle as react node 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <div>
        <h1>
          Кастомный заголовок как react node
        </h1>
      </div>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with signTitle as string 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Кастомный заголовок как текст
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with unmasked phone 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          <div>
            Код отправлен на
             
            +7 999 888-55-66
          </div>
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should math snapshot without smsCountdown 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;
